Granularize bootstrap CSS for smaller imports

--- a/src/styles/_scaffolding.scss
+++ b/src/styles/_scaffolding.scss
@@ -1,3 +1,6 @@
+@import "variables";
+@import "mixins/box-sizing";
+
 // Reset the box-sizing
 //
 // Heads up! This reset may cause conflicts with some third-party widgets
