Modified containers/components to import granularized styles

--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -1,4 +1,6 @@
-@import "../../styles/app";
+@import "../../styles/normalize";
+@import "../../styles/variables";
+@import "../../styles/scaffolding";
 
 /*
  * Base styles
