--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,9 +1,14 @@
 @import '../../styles/variables';
+@import '../../styles/container';
 
-.footer {
+.root {
   margin: 0;
   padding: $grid-gutter-width*2 $grid-gutter-width $grid-gutter-width;
   background: $gray-lighter;
   color: $gray-light;
   font-size: 0.875em;
+
+  .copyright {
+    text-align: center;
+  }
 }
