--- a/src/containers/About/About.scss
+++ b/src/containers/About/About.scss
@@ -1,7 +1,6 @@
 @import '../../styles/variables';
-@import '../../styles/container';
 
-.root {
+.about {
   min-height: 500px;
   padding-top: 2em;
   padding-bottom: 2em;
