--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,7 +1,6 @@
 @import '../../styles/variables';
-@import '../../styles/container';
 
-.root {
+.footer {
   margin: 0;
   padding: $grid-gutter-width*2 $grid-gutter-width $grid-gutter-width;
   background: $gray-lighter;
