--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -1,6 +1,5 @@
-@import "../../styles/normalize";
-@import "../../styles/variables";
-@import "../../styles/scaffolding";
+@import '../../../node_modules/bootstrap/dist/css/bootstrap.css';
+@import '../../styles/variables';
 
 /*
  * Base styles
